--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - MONGO=${MONGO}
       - JWT=${JWT}
+    restart: unless-stopped
 
   # Client service
   client:
@@ -25,6 +26,7 @@ services:
       - "80:80"
     environment:
       - REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
+    restart: unless-stopped
     depends_on:
       - server
 
