--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,5 @@
 # Select a base image
-FROM  node:current-alpine
+FROM node:18.20.2-alpine
 
 # Create a directory  and go to the directory 
 WORKDIR /app
