fixing ssl cert

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 COPY package.json .
 RUN npm install
-COPY . .
+COPY . . 
 RUN npm run build
 
 # Stage-2
@@ -24,9 +24,9 @@ server { \
 } \
 server { \
     listen 443 ssl; \
-    server_name example.com; \
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem; \
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem; \
+    server_name markbosire.click; \
+    ssl_certificate /etc/letsencrypt/live/markbosire.click/fullchain.pem; \
+    ssl_certificate_key /etc/letsencrypt/live/markbosire.click/privkey.pem; \
     ssl_protocols TLSv1.2 TLSv1.3; \
     ssl_ciphers HIGH:!aNULL:!MD5; \
     location / { \
