undoing the ssl cert thing

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,39 +1,39 @@
 # Stage-1 & specify a name 'builder'
 FROM node:18.20.2-alpine AS builder
 
+# Create a directory and go to the directory  
 WORKDIR /app
 
+# Copy the package.json file to my current directory to install the necessary dependence   
 COPY package.json .
+
+# Install the dependence
 RUN npm install
-COPY . . 
+
+# Copy other files to my current directory
+COPY . .
+
+# Build and optimize static file
 RUN npm run build
 
 # Stage-2
 FROM nginx:1.25.2-alpine-slim
 
+# Remove the default nginx configuration
 RUN rm /etc/nginx/conf.d/default.conf
 
-# SSL-enabled nginx configuration
+# Create a new nginx configuration
 RUN echo ' \
 server { \
     listen 80; \
-    server_name markbosire.click; \
+    server_name localhost; \
+    \
     location / { \
-        return 301 https://$host$request_uri; \
-    } \
-} \
-server { \
-    listen 443 ssl; \
-    server_name markbosire.click; \
-    ssl_certificate /etc/letsencrypt/live/markbosire.click/fullchain.pem; \
-    ssl_certificate_key /etc/letsencrypt/live/markbosire.click/privkey.pem; \
-    ssl_protocols TLSv1.2 TLSv1.3; \
-    ssl_ciphers HIGH:!aNULL:!MD5; \
-    location / { \
-        root /usr/share/nginx/html; \
-        index index.html index.htm; \
+        root   /usr/share/nginx/html; \
+        index  index.html index.htm; \
         try_files $uri $uri/ /index.html; \
     } \
+    \
     location /api { \
         proxy_pass http://server:8800; \
         proxy_http_version 1.1; \
@@ -44,6 +44,11 @@ server { \
     } \
 }' > /etc/nginx/conf.d/default.conf
 
+# Copy the static file to my Nginx folder to serve static contain
 COPY --from=builder /app/build /usr/share/nginx/html
-EXPOSE 80 443
+
+# Open the port to react
+EXPOSE 80
+
+# Run nginx in the foreground
 CMD ["nginx", "-g", "daemon off;"]
