--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -17,14 +17,16 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       # Setup gcloud CLI
-      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      - uses: google-github-actions/setup-gcloud@v2
+        with:
+          version: ">= 416.0.0"
+      - uses: "google-github-actions/auth@v2"
         with:
           workload_identity_provider: "projects/376749813573/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
           service_account: "githubactions@banded-meridian-435911-g6.iam.gserviceaccount.com"
-          version: "290.0.1"
 
       # Configure Docker to use the gcloud command-line tool as a credential
       # helper for authentication
