--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -25,8 +25,8 @@ jobs:
           version: ">= 416.0.0"
       - uses: "google-github-actions/auth@v2"
         with:
+          project_id: ${{ env.PROJECT_ID }}
           workload_identity_provider: "projects/376749813573/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
-          service_account: "githubactions@banded-meridian-435911-g6.iam.gserviceaccount.com"
 
       # Configure Docker to use the gcloud command-line tool as a credential
       # helper for authentication
