--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           project_id: ${{ env.PROJECT_ID }}
           workload_identity_provider: "projects/376749813573/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
+          service_account: "githubactions@banded-meridian-435911-g6.iam.gserviceaccount.com"
 
       # Configure Docker to use the gcloud command-line tool as a credential
       # helper for authentication
