--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,19 +1,23 @@
 # Stage-1 & specify a name 'builder'
 FROM node:18.20.2-alpine AS builder
 
+ARG REACT_APP_FIREBASE_API_KEY
+ENV REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
+
 # Create a directory and go to the directory  
 WORKDIR /app
 
-# Copy the package.json file to my current directory to install the necessary dependence   
-COPY package.json .
+# Copy the package.json and package-lock.json to the current directory to install the necessary dependencies   
+COPY package.json package-lock.json* ./
 
-# Install the dependence
-RUN npm install
+# Clear NPM cache and install the dependencies
+RUN npm ci && npm cache clean --force
+COPY ./src ./src
 
 # Copy other files to my current directory
 COPY . .
 
-# Build and optimize static file
+# Build and optimize static files
 RUN npm run build
 
 # Stage-2
@@ -44,10 +48,10 @@ server { \
     } \
 }' > /etc/nginx/conf.d/default.conf
 
-# Copy the static file to my Nginx folder to serve static contain
+# Copy the static files to the Nginx folder to serve static content
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Open the port to react
+# Open the port to React
 EXPOSE 80
 
 # Run nginx in the foreground
