--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -2,8 +2,6 @@ name: Build and Deploy to Google Compute Engine
 
 on:
   push:
-    branches:
-      - main
     tags:
       - v\d+\.\d+\.\d+
 
@@ -19,6 +17,13 @@ jobs:
       id-token: "write"
 
     steps:
+      - name: Set ENV
+        run: |-
+          if [ ${GITHUB_REF##*/} = "master" ]; then
+            echo "ENV=staging" >> $GITHUB_ENV
+          else 
+            echo "ENV=prod" >> $GITHUB_ENV
+          fi
       - name: Checkout
         uses: actions/checkout@v4
 
