separate prod and staging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.8"
 
 services:
   server:
+    logging:
+      driver: gcplogs
     image: gcr.io/banded-meridian-435911-g6/youtube-backend:${IMAGE_TAG}
     ports:
       - "8800:8800"
@@ -11,6 +13,8 @@ services:
     restart: unless-stopped
 
   client:
+    logging:
+      driver: gcplogs
     image: gcr.io/banded-meridian-435911-g6/youtube-frontend:${IMAGE_TAG}
     ports:
       - "80:80"
