--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -1,11 +1,11 @@
 name: Build and Deploy to Google Compute Engine
-
+#remove the comments to enable github actions
 on:
   push:
-    branches:
-      - main
-    tags:
-      - v\d+\.\d+\.\d+
+    #branches:
+    # - main
+    #tags:
+    #- v\d+\.\d+\.\d+
 
 env:
   PROJECT_ID: banded-meridian-435911-g6
