--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -7,9 +7,6 @@ on:
     #tags:
     #- v\d+\.\d+\.\d+
 
-env:
-  PROJECT_ID: banded-meridian-435911-g6
-
 jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
@@ -35,9 +32,9 @@ jobs:
           version: ">= 416.0.0"
       - uses: "google-github-actions/auth@v2"
         with:
-          project_id: ${{ env.PROJECT_ID }}
-          workload_identity_provider: "projects/376749813573/locations/global/workloadIdentityPools/github-pool/providers/github-provider"
-          service_account: "githubactions@banded-meridian-435911-g6.iam.gserviceaccount.com"
+          project_id: ${{ secrets.PROJECT_ID }}
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT }}
 
       # Configure Docker to use the gcloud command-line tool as a credential
       # helper for authentication
