--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   server:
     logging:
       driver: gcplogs
-    image: gcr.io/banded-meridian-435911-g6/youtube-backend:${IMAGE_TAG}
+    image: gcr.io/${PROJECT_ID}/youtube-backend:${IMAGE_TAG}
     ports:
       - "8800:8800"
     environment:
@@ -15,7 +15,7 @@ services:
   client:
     logging:
       driver: gcplogs
-    image: gcr.io/banded-meridian-435911-g6/youtube-frontend:${IMAGE_TAG}
+    image: gcr.io/${PROJECT_ID}/youtube-frontend:${IMAGE_TAG}
     ports:
       - "80:80"
     environment:
